<resources>
    <string name="app_name">Skin Check</string>
    <string name="sign_in">会員登録</string>
    <string name="login"></string>
    <string name="add_title">タイトル</string>
    <string name="add_result">推論結果: ????</string>
    <string name="add_result_percentage">確率: ????</string>
    <string name="add_date">日付: </string>
    <string name="button_save">保存する</string>
    <string name="button_update">更新する</string>
    <string-array name="result_array">
        <item>ホクロ</item>
        <item>メラノーマ</item>
        <item>良性角化症</item>
        <item>基底細胞がん</item>
        <item>光線角化症およびボーエン病</item>
        <item>血管性病変</item>
        <item>皮膚線維腫</item>
    </string-array>
    <string-array name="feedback_array">
        <item>
            ホクロは皮膚にできる良性の腫瘍で、様々な形や色があります。
            メラノサイトという細胞が集まってできていて、普通は危険ではありません。
        </item>
        <item>
            メラノーマは悪性の腫瘍で、メラノサイトががん化したものです。
            早期に発見すれば手術で取り除くことで治ることが多いですが、進行すると体内の他の場所に広がることがあります。
            様々なタイプのメラノーマがあり、早期に発見することが重要です。
        </item>
        <item>
            良性角化症には、「脂漏性角化症(老人性いぼ)」や「日光性色素斑(そばかすのようなもの)」が含まれます。
            これらは、皮膚にできる良性の病変ですが、見た目がメラノーマに似ていることがあり、診断のために取られることがあります。
        </item>
        <item>
            基底細胞がんは皮膚がんの一種ですが、転移することはまれで、早期に治療すれば深刻な問題になることは少ないです。
            ただし、放置すると皮膚の組織を破壊しながら成長することがあります。
            色々な見た目のタイプがありますが、治療が比較的簡単です。
        </item>
        <item>
            これらは、皮膚の初期のがんや前がん状態の一種です。
            光線角化症は特に紫外線によるダメージが原因で、主に顔や腕など日に当たりやすい部分にできます。
            ホーエン病も皮膚がんの一種ですが、日光以外にウイルスが原因となることもあります。
            これらはガン化することもあるため、早めに治療が必要です。
        </item>
        <item>
            血管に関連する皮膚病変で、赤い小さなしこりや血管の異常などがあります。
            一般的に良性ですが、出血などの症状が見られることもあります。
        </item>
        <item>
            これは、皮膚の軽い傷や炎症に対する反応でできる良性のしこりです。
            見た目は茶色で、中央が少し硬くなることが多いです。
            特に治療の必要はないことがほとんどです。
        </item>
    </string-array>
</resources>